--- a/contact.html
+++ b/contact.html
@@ -69,16 +69,16 @@ canonical: https://heliumjk.github.io
             <div class="contact-info">
               <address>
 							<i class="fa fa-map-marker icons cyan-color contact-info-icon"></i>
-							Level 13, 2 Elizabeth St, Melbourne,
+							Strada Nicolae Bălcescu 43
 							<br>
-							Victoria 3000, Australia
+              Sighetu Marmației 435500
 						</address>
               <div class="tel-info">
-                <a href="tel:1800452308"><i class="fa fa-mobile icons cyan-color contact-info-icon"></i>1800 452 308</a>
-                <a href="tel:+61(8)82343555"><i class="fa fa-phone icons cyan-color contact-info-icon"></i>+61 (8) 8234 3555</a>
+                <a href="tel:0747558975"><i class="fa fa-mobile icons cyan-color contact-info-icon"></i>0747 558 975</a>
+                <!-- <a href="tel:+61(8)82343555"><i class="fa fa-phone icons cyan-color contact-info-icon"></i>+61 (8) 8234 3555</a> -->
               </div>
-              <a href="mailto:hello@spiritapp.com"><i class="fa fa-envelope-o icons cyan-color contact-info-icon"></i>admin@uideck.com</a>
-              <a href="#"><i class="fa fa-tablet icons cyan-color contact-info-icon"></i>www.uideck.com</a>
+              <a href="mailto:iuliu_ivanciuc@yahoo.com"><i class="fa fa-envelope-o icons cyan-color contact-info-icon"></i>iuliu_ivanciuc@yahoo.com</a>
+              <a href="#"><i class="fa fa-tablet icons cyan-color contact-info-icon"></i>www.iuliuivanciuc.com</a>
               <ul class="social-links">
                 <li>
                   <a href="#" class="fa fa-facebook"></a>
