--- a/index.html
+++ b/index.html
@@ -410,15 +410,15 @@ canonical: https://heliumjk.github.io
             <div class="contact-info">
               <address>
 							<i class="fa fa-map-marker icons cyan-color contact-info-icon"></i>
-							Level 13, 2 Elizabeth St, Melbourne,
+							Strada Nicolae Bălcescu 43
 							<br>
-							Victoria 3000, Australia
+							Sighetu Marmatiei, 435500
 						</address>
               <div class="tel-info">
                 <a href="tel:1800452308"><i class="fa fa-mobile icons cyan-color contact-info-icon"></i>1800 452 308</a>
                 <a href="tel:+61(8)82343555"><i class="fa fa-phone icons cyan-color contact-info-icon"></i>+61 (8) 8234 3555</a>
               </div>
-              <a href="https://antoniotrento.github.io"><i class="fa fa-tablet icons cyan-color contact-info-icon"></i>https://antoniotrento.github.io</a>
+              <!-- <a href="https://antoniotrento.github.io"><i class="fa fa-tablet icons cyan-color contact-info-icon"></i>https://antoniotrento.github.io</a> -->
               {% include social-block.html %}
             </div>
           </div>
